2004-06-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (set_color, draw_inside_color_smooth_box_bitmap)
	src/pm3d.c (cb2gray): Invert gray in routine pm3d.c:cb2gray(cb), instead
	of color.c:set_color(gray). The latter is now just setting
	term->set_color(gray) if the terminal supports set_color() API.

	* graph3d.c (do_3dplot): Fixed set_color(z2cb( cb2gray(cntrs->z)) to 
	set_color(cb2gray( z2cb(cntrs->z) )).

	* gadgets.c (apply_textcolor): Take care of positive/negative palette
	for 'set label ... textcolor frac ...'.

2004-06-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (process_event): Send a GE_reset event back to gnuplot
	if the current plot window is closed.
	* src/mouse.c (event_reset): Terminate paused_for_mouse state whenever a
	GE_reset event is received.

2004-06-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (mainloop): Yet another tweak to the mouse timing code.
	This one reduces mouse-tracking hysteresis on systems that claim to have
	usleep() but in fact have much coarser timing.

2004-06-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/save.c: Save log cb axis (bugfix).

2004-06-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c: Do not start zooming during 'pause mouse'.

2004-06-12  Ethan Merritt  <merritt@u.washington.edu>

	* show.c (show_datafile): Provide missing show commands for suboptions
	"show datafile {separator|comment|missing}".

2004-06-12  Ethan Merritt  <merritt@u.washington.edu>

	* datafile.h: define DF_MISSING as a return code from df_readline().
	* datatile.c (df_readline): If a data field contains the missing data
	string, return DF_MISSING rather than DF_UNDEFINED.
	* fit.c (fit_command): Explicitly ignore DF_MISSING data.
	* plot2d.c (get_data): Explicitly test for data marked DF_MISSING 
	but treat it the same as DF_UNDEFINED.
	* plot3d.c (get_3ddata): Explicitly test for data marked DF_MISSING 
	but treat it the same as DF_UNDEFINED.
	